--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ Marin/MC/*.json
 *.o
 *.so
 js/brixlib-*.*
-
+bin/load_templates/*Output.json
 # Packages #
 ############
 # it's better to unpack these files and commit the raw source
