--- a/bin/onan/package.json
+++ b/bin/onan/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "lodash": "~2.4.1",
     "eclg-prospero": "~2.1.2",
-    "q": "~1.0.1"
+    "q": "~1.0.1",
+    "config": "~0.4.35"
   },
   "devDependencies": {},
   "scripts": {
