adding tingodb module

--- a/bin/onan/package.json
+++ b/bin/onan/package.json
@@ -13,7 +13,8 @@
     "lodash": "~2.4.1",
     "eclg-prospero": "~2.1.2",
     "q": "~1.0.1",
-    "config": "~0.4.35"
+    "config": "~0.4.35",
+    "tingodb": "~0.2.1"
   },
   "devDependencies": {
     "mocha": "~1.19.0",
