--- a/bin/onan/package.json
+++ b/bin/onan/package.json
@@ -19,7 +19,8 @@
   "devDependencies": {
     "mocha": "~1.19.0",
     "should": "~3.3.1",
-    "chai": "~1.9.1"
+    "chai": "~1.9.1",
+    "yargs": "~1.2.2"
   },
   "scripts": {
     "test": "make test",
