--- a/bin/onan/package.json
+++ b/bin/onan/package.json
@@ -20,7 +20,8 @@
     "mocha": "~1.19.0",
     "should": "~3.3.1",
     "chai": "~1.9.1",
-    "yargs": "~1.2.2"
+    "yargs": "~1.2.2",
+    "graceful-fs": "~3.0.1"
   },
   "scripts": {
     "test": "make test",
