add img directories to gitignore
In general img directories are created and populated for local previewing of the html files that may refer to images in the relative path img/*, so we don't want them checked into the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ Manza/MC/*.json
 Marin/MC/*.json
 # any updated file such as the updated csv file created by the script
 *.updated
+# any files in an img directory which might exist for previewing html files
+img
 
 # Compiled source #
 ###################
