enhance the pafget.sh script
- The paf env is now specified on the command line
- the output is saved to output files
- the envelope data is also retrieved and saved in an output file
- if jq is available the output will be pretty printed into output files

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ Marin/MC/*.json
 *.updated
 # any files in an img directory which might exist for previewing html files
 img
+# pafget output files
+pafget*.out*
 
 # Compiled source #
 ###################
