deprecate pafimport.sh in favor of new pafpublish.sh
new pafpublish.sh uses the shared script setpafenv.sh to determine the headers and urls and paftool.

--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,9 @@ Marin/MC/*.json
 *.updated
 # any files in an img directory which might exist for previewing html files
 img
-# pafget output files
+# pafget and pafpublish output files
 pafget*.out*
+pafpublish.out
 
 # Compiled source #
 ###################
